--- a/validation.html
+++ b/validation.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" crossorigin="" href="style.css">
   </head>
   <body>
-  <form action="https://submit-form.com/qB7cbblKJ" method="post">
+  <form action="https://submit-form.com/EccPZgnlt" method="post">
     <input
     type="hidden"
     name="_redirect"
